--- a/TestNG-Demo/test-output/old/Suite/CarLoanTests.properties
+++ b/TestNG-Demo/test-output/old/Suite/CarLoanTests.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=HomeLoanTests][SuiteResult context=PersonalLoanTests][SuiteResult context=CarLoanTests]
+[SuiteResult context=CarLoanTests]
