--- a/TestNG-Demo/test-output/old/Suite/HomeLoanTest.properties
+++ b/TestNG-Demo/test-output/old/Suite/HomeLoanTest.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=HomeLoanTest]
+[SuiteResult context=HomeLoanTest][SuiteResult context=CarLoanTest][SuiteResult context=PersonalLoanTest]
